// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single testimonial correctly 1`] = `
.c0 {
  margin-bottom: 30px;
}

.c2 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c3 {
  color: #ea232d;
  font-style: italic;
}

@media (min-width:40.0625em) {
  .c0 {
    margin-bottom: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:40.0625em) {
  .c1 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:40.0625em) {
  .c2 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: 30px;
    margin-right: -30px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Collection hero"
      src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
      srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
    />
  </div>
  <div
    className="c2"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
        }
      }
    />
    <span
      className="c3"
    >
      — 
      Owen, London
    </span>
  </div>
</div>
`;

exports[`renders testimonials correctly 1`] = `
.c0 {
  margin-bottom: 40px;
}

.c2 {
  margin-bottom: 30px;
}

.c4 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c7 {
  position: relative;
  width: 90%;
  background-color: #fff;
  padding: 30px;
  margin: -30px auto 0;
}

.c5 {
  color: #ea232d;
  font-style: italic;
}

.c1 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

@media (min-width:40.0625em) {
  .c2 {
    margin-bottom: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:40.0625em) {
  .c3 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:40.0625em) {
  .c6 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media (min-width:40.0625em) {
  .c4 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: -30px;
    margin-right: 30px;
  }
}

@media (min-width:40.0625em) {
  .c7 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    margin: 0;
    margin-left: 30px;
    margin-right: -30px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2>
      Testimonials about this cool component
    </h2>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt="Collection hero"
          src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
          srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
        />
      </div>
      <div
        className="c4"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
            }
          }
        />
        <span
          className="c5"
        >
          — 
          Owen, London
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <img
          alt="Collection hero"
          src="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
          srcSet="//images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550 480w,
        //images.ctfassets.net/6sxvmndnpn0s/2DPKnmx9Na8WYgG4ySqkA/5ca89770eb1ac36c9dbfe34d8d65eb5c/collection-hero.jpg?fm=jpg&w=550"
        />
      </div>
      <div
        className="c7"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
            }
          }
        />
        <span
          className="c5"
        >
          — 
          Owen, London
        </span>
      </div>
    </div>
  </div>
</div>
`;
